# madara-scripts

./: package-lock.json  package.json
assets/: piltover_appchain.compiled_contract_class.json  starknet_bridge_TokenBridge.compiled_contract_class.json  starknet_bridge_TokenBridge.contract_class.json
deploy_appchain/: deploy_appchain.js  deploy_appchain_2.js  process_time.js
griddy_script/: block_times.js  check_snos_processing_time.js  delete_dbs.js  deploy.js  deploy_gridy_l3.js  deployed_accounts.json  init_accounts.js  init_accounts_deploy.js  init_accounts_l2_l3.js  init_accounts_udc.js  init_bridge.js  init_core_contract.js  retry_jobs.js  spam_transfer_transactions.js  time_taken_atlantic.js
griddy_script/assets/: gridy.sierra.json  gridy_BotContract.compiled_contract_class.json  gridy_BotContract.contract_class.json  gridy_GameContract.compiled_contract_class.json  gridy_GameContract.contract_class.json  gridy_SnakeAccountMock.compiled_contract_class.json  gridy_SnakeAccountMock.contract_class.json  gridy_l2_registry.compiled_contract_class.json  gridy_l2_registry.contract_class.json  gridy_l3_registry.compiled_contract_class.json  gridy_l3_registry.contract_class.json
l3_scripts/0_appchain/: deploy_appchain.js
l3_scripts/1_accounts/: deploy_accounts.js  (+1 more)
pm2_transfer_script/: config.js  ecosystem.config.js  package-lock.json  package.json  single-account-transfer.js
retry/: reset_jobs.py  retry_jobs.py
updatestate_l3_script/: Cargo.toml
updatestate_l3_script/assets/: proof.json  proof_part2.json
updatestate_l3_script/src/: main.rs
(+44 files in other folders)
