[package]
name = "block_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["fs", "rt-multi-thread", "macros"] }
bincode = "1.3"
# Starknet dependencies
cairo-vm = "=1.0.1"
starknet-core = "0.12"
starknet-crypto = "0.7"
starknet-providers = "0.12"
starknet-signers = "0.10"
starknet = "0.11.0"
swiftness_proof_parser = "0.1.0"

starknet-types-core = { version = "0.1.7", default-features = false, features = [
  "hash",
] }

appchain-core-contract-client = { git = "https://github.com/Mohiiit/zaun", rev = "878cf6fac215c260858b070f72fb52a70bf5e460" }
